@@ -4190,8 +4190,8 @@
 		  <child>
 		    <widget class="GtkLabel" id="flabel">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Father&lt;/b&gt;</property>
-		      <property name="use_underline">False</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Fat_her&lt;/b&gt;</property>
+		      <property name="use_underline">True</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap">False</property>
@@ -4200,6 +4200,7 @@
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <property name="mnemonic_widget">father_list</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">0</property>
@@ -4272,8 +4273,8 @@
 		  <child>
 		    <widget class="GtkLabel" id="mlabel">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Mother&lt;/b&gt;</property>
-		      <property name="use_underline">False</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Moth_er&lt;/b&gt;</property>
+		      <property name="use_underline">True</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap">False</property>
@@ -4282,6 +4283,7 @@
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <property name="mnemonic_widget">mother_list</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">0</property>
