@@ -1,6 +1,9 @@
 Version 1.0.0 -- the "Stable as a tombstone" release
 * New filter and custom filter rule based on the personal completeness flag.
 * Improved GEDCOM support. 
+* Phone field in Addresses and Places.
+* New "Add from database..." button in gallery tabs. 
+* Format of the Notes can be set to Flowed or Preformatted.
 
 Version 0.98.0 -- the "Round me off" release
 * More compliance with GNOME HIG.
